@@ -1,3 +1,8 @@
+2006-10-31 Borut Razem <borut.razem AT siol.net>
+
+	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
+	  debugger/mcs51/configure: get readline version
+
 2006-10-30 Borut Razem <borut.razem AT siol.net>
 
 	* debugger/mcs51/sdcdb.c: replaced hardcoded "/" with DIR_SEPARATOR_STRING
